# weather-monitor

./: .env.example  .env.timescaledb.example  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0ac3ebf13836_create_weather_stations_weather_real_.py  84965ab12140_intitial_conversion_modify_tables.py  877cca8c2731_create_monitor_user_table.py  a08dc5f45b75_setup_relationship_user_station.py  d0c168df9425_.py  f4fdcee41afe_cascade_parent_child_station_conditions.py
data/application/: init.sql  init_timescale.sql
manual_conversion/: init_timescale.sql
src/: main.py  models.py  permissions.py  schema.py  user_login.py  user_management.py  weather_conditions.py
src/dependencies/: auth.py  config.py  context.py  database.py
src/graphql_api/: permissions.py  schema.py
src/rest_api/: pydantic_data_types.py  routes.py
test/: test_query_meteostations.py
utils/queries/: create_meteostation.graphql  fetch_meteostation_data.graphql  fetch_weather_data.graphql  insert_station_conditions.grapqhl  remove_meteostation.graphql
utils/queries_mutations/: create_meteostation.graphql  fetch_meteostation_data.graphql  insert_station_conditions.grapqhl  update_weather_station
utils/rest/: insert_weather_data.http
